<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_insert_photo_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="100dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_preview" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="100dp"
        android:layout_height="54dp"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"
        app:layout_constraintTop_toTopOf="@+id/btn_camera" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/et_description" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="83dp"
        android:layout_height="47dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="24dp"
        android:text="@string/share_location"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#B0C1C1C1"
        android:gravity="center"
        android:hint="@string/description"
        android:inputType="text"
        android:paddingLeft="14dp"
        android:textSize="15sp"
        app:cardCornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>