<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Camera.CamActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/captureImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_camera_alt_24" />

    <ImageView
        android:id="@+id/switchCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="-70dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/baseline_flip_camera_ios_24" />

</androidx.constraintlayout.widget.ConstraintLayout>